Updated
- 修复一个使用List.of的小bug
- 浅支持java8